Update .gitignore to remove Sketch, Figma, and XD files

--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./src/styles/index.scss />
+    <title>Cart</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./src/index.css">
-  <title>Document</title>
-</head>
-
-<body>
-  <span class="product-category">Fruta</span>
-  <span class="product-name">Banana</span>
-  <span class="product-price">$6.50</span>
-  <img class="icon" src="./assets/images/icon-add-to-cart.svg">
-</body>
-
+  <body>
+    <span class="product-category">Fruta</span>
+    <span class="product-name">Banana</span>
+    <span class="product-price">$6.50</span>
+    <img
+      class="icon"
+      src="./assets/images/icon-add-to-cart.svg"
+      alt="Add to cart icon"
+    />
+  </body>
 </html>
