Update index.html and index.scss files

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./src/styles/index.scss />
+    <link rel="stylesheet" href="./src/styles/index.scss" />
     <title>Cart</title>
   </head>
 
@@ -16,5 +16,14 @@
       src="./assets/images/icon-add-to-cart.svg"
       alt="Add to cart icon"
     />
+
+    <div class="container">
+      <img
+        class="product-img"
+        src="./assets/images/icon-add-to-cart.svg"
+        alt="product"
+      />
+      <div class="button">button</div>
+    </div>
   </body>
 </html>
