--- a/index.html
+++ b/index.html
@@ -1,18 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./src/styles/index.scss" />
+    <title>Document</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./src/index.css">
-  <title>Document</title>
-</head>
+  <body>
+    <main class="flex p-12 gap-6">
+      <div class="flex flex-col">
+        <h1>Desserts</h1>
+        <ul id="product-list" class="flex flex-wrap space-x-6"></ul>
+      </div>
 
-<body>
-  <span class="product-category">Fruta</span>
-  <span class="product-name">Banana</span>
-  <span class="product-price">$6.50</span>
-  <img class="icon" src="./assets/images/icon-add-to-cart.svg">
-</body>
+      <div class="bg-white p-5 border border-black">
+        <h2>Your Cart (7)</h2>
+        <ul>
+          <li>
+            <span>1x</span>
+            <span>@$5.50</span>
+            <span>$5.50</span>
+          </li>
+          <li>
+            <span>4x</span>
+            <span>@$7.00</span>
+            <span>$28.00</span>
+          </li>
+        </ul>
 
+        <div>
+          <span>Order Total</span>
+          <span>$46.50</span>
+        </div>
+      </div>
+    </main>
+
+    <script type="module" src="./src/app.ts"></script>
+  </body>
 </html>
